[gd_scene load_steps=12 format=2]

[ext_resource path="res://Gunnkour/Levels/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Gunnkour/Killbox/ThaleahFat.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Gunnkour/Characters/Sounds/mainmenumusic.wav" type="AudioStream" id=3]
[ext_resource path="res://Gunnkour/Tilemap/mainmenubackground.jpg" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void vertex()
{
	VERTEX.x += cos(TIME + VERTEX.x) * 1.5;
	VERTEX.y += sin(TIME + VERTEX.y) * 2.5;
	
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

void vertex()
{
	VERTEX.x += cos(TIME + VERTEX.x) * 0.5;
	VERTEX.y += sin(TIME + VERTEX.y) * 0.5;
	
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 946.817, 535.985 )
scale = Vector2( 1.681, 1.681 )
texture = ExtResource( 4 )

[node name="Label4" type="Label" parent="."]
material = SubResource( 4 )
margin_left = 504.192
margin_top = 18.588
margin_right = 596.192
margin_bottom = 51.588
rect_scale = Vector2( 16.1832, 15.7053 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.317647, 0.329412, 0.0470588, 1 )
text = "Settings
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
material = SubResource( 4 )
margin_left = 498.395
margin_top = 12.0
margin_right = 590.395
margin_bottom = 45.0
rect_scale = Vector2( 16.1832, 15.7053 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.972549, 1, 0.14902, 1 )
text = "Settings
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Label5" type="Label" parent="."]
margin_left = 225.599
margin_top = 289.018
margin_right = 309.599
margin_bottom = 304.018
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fullscreen:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 222.643
margin_top = 286.374
margin_right = 306.643
margin_bottom = 301.374
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
text = "Fullscreen:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 225.735
margin_top = 385.687
margin_right = 302.735
margin_bottom = 400.687
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Eye Color: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Button" parent="."]
margin_left = 195.37
margin_top = 369.085
margin_right = 284.37
margin_bottom = 390.085
rect_scale = Vector2( 4.71791, 4.71791 )
custom_styles/focus = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
text = "Eye Color: "
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label16" type="Button" parent="."]
margin_left = 503.278
margin_top = 275.197
margin_right = 592.278
margin_bottom = 296.197
rect_scale = Vector2( 4.71791, 4.71791 )
custom_styles/focus = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Off"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label15" type="Button" parent="."]
margin_left = 499.861
margin_top = 272.064
margin_right = 588.861
margin_bottom = 293.064
rect_scale = Vector2( 4.71791, 4.71791 )
custom_styles/focus = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "Off"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label14" type="Label" parent="."]
margin_left = 588.629
margin_top = 385.687
margin_right = 665.629
margin_bottom = 400.687
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "<-- Just click it ;*)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label13" type="Label" parent="."]
margin_left = 585.537
margin_top = 383.071
margin_right = 662.537
margin_bottom = 398.071
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
text = "<-- Just click it ;*)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="."]
margin_left = 225.735
margin_top = 477.925
margin_right = 334.735
margin_bottom = 492.925
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Master volume: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="."]
margin_left = 222.643
margin_top = 475.309
margin_right = 331.643
margin_bottom = 490.309
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
text = "Master volume: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="."]
margin_left = 225.735
margin_top = 578.703
margin_right = 322.735
margin_bottom = 593.703
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MUSIC VOLUME: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="."]
margin_left = 222.643
margin_top = 576.087
margin_right = 319.643
margin_bottom = 591.087
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
text = "MUSIC VOLUME: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="."]
margin_left = 225.735
margin_top = 675.1
margin_right = 322.735
margin_bottom = 690.1
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SFX VOLUME: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="."]
margin_left = 222.643
margin_top = 672.484
margin_right = 319.643
margin_bottom = 687.484
rect_scale = Vector2( 4.71791, 4.71791 )
custom_fonts/font = SubResource( 6 )
text = "SFX VOLUME: "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Label3" to="." method="_on_Label3_pressed"]
[connection signal="pressed" from="Label16" to="." method="_on_Label15_pressed"]
[connection signal="pressed" from="Label15" to="." method="_on_Label15_pressed"]
